--- a/music_app/app/views/bands/edit.html.erb
+++ b/music_app/app/views/bands/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="main-content">
   <h1 class="main-logo">Music App</h1>
   <nav>
-    <a class="button" href="<%= users_url%>">Take me Home</a>
+    <a class="button" href="<%= bands_url%>">Take me Home</a>
     <div class="user-detail">
       <p><%="Logged in as: #{current_user.email}" %></p>
       <form action="<%= session_url %>" method="post">
@@ -17,7 +17,7 @@
     <input type="hidden" name="_method" value="patch">
     <p>
       <label for="name">Band Name</label>
-      <input id="name" type="text" name="band[name]">
+      <input id="name" type="text" name="band[name]" value="<%=@band.name%>">
     </p>
     <input type="submit">
     <br>
