--- a/music_app/app/views/bands/new.html.erb
+++ b/music_app/app/views/bands/new.html.erb
@@ -1,7 +1,7 @@
 <div class="main-content">
   <h1 class="main-logo">Music App</h1>
   <nav>
-    <a class="button" href="<%= users_url%>">Take me Home</a>
+    <a class="button" href="<%= bands_url%>">Take me Home</a>
     <div class="user-detail">
       <p><%="Logged in as: #{current_user.email}" %></p>
       <form action="<%= session_url %>" method="post">
