created track model and associations

--- a/music_app/app/views/albums/edit.html.erb
+++ b/music_app/app/views/albums/edit.html.erb
@@ -38,7 +38,7 @@
       <label for="year">Year</label>
       <input id="year" type="text" name="album[year]" value="<%=@album.year%>">
     </p>
-    <input type="submit" value="Edit Album">
+    <input type="submit" value="Update Album">
     <br>
     <% if flash[:errors] %>
       <%= flash[:errors] %>
